# BoolSimplifierCpp

./: CMakeLists.txt  main.cpp
model/: Constant.cpp  Constant.h  Expr.cpp  Expr.h  Step.cpp  Step.h  Symbol.cpp  Symbol.h  Variable.cpp  Variable.h
